finish upload & get cv